tests/NormalTests/paczka1/fuzzy1/78564413.err
Error in line 1: gmDI6aBYU A196 61,8
Error in line 4: vQ2Ozq8 A554 47,4
Error in line 14: vQ2Ozq8 A446 0,9
Error in line 18: vPr S991 42,6
Error in line 23: vPr A196 91,6
Error in line 26: vPr A446 79,8
Error in line 33: S991 A196 80,0
